[metadata]
name = rss-server
version = 1.0.13
description = Modular RSS Server application
author = Your Name
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules =
    app
    get_latest_release
    config
    fetch_functions
    product_utils
python_requires = >=3.7
install_requires =
    APScheduler==3.10.4
    beautifulsoup4==4.12.2
    blinker==1.6.2
    certifi==2024.7.4
    charset-normalizer==3.2.0
    click==8.1.7
    feedgen==0.9.0
    feedgenerator==2.1.0
    Flask==2.3.3
    gunicorn==23.0.0
    idna==3.7
    iniconfig==2.0.0
    itsdangerous==2.1.2
    Jinja2==3.1.6
    lxml==5.3.0
    MarkupSafe==3.0.2
    packaging==23.1
    pluggy==1.3.0
    prometheus-client==0.17.1
    prometheus-flask-exporter==0.22.4
    python-dateutil==2.8.2
    pytz==2023.3.post1
    PyYAML==6.0.2
    requests==2.32.4
    six==1.16.0
    soupsieve==2.5
    tzlocal==5.0.1
    urllib3==2.2.2
    Werkzeug==3.1.3

